# CLearning

./: C_learning_plan.md  C_learning_plan_new.md  StartStudyCheckin.bat  StudyCheckin.sh  net.md  student.txt
2026-02-14/: helloworld
2026-02-15/: 01_variables_types.c  02_if_else.c  03_for_while.c
2026-02-16/: 01_function_scope_basics  01_function_scope_basics.c  02_header_file_split.c  main  main_split.c  math_utils.c  math_utils.h
2026-02-17/: 01_array_basics  02_array_traversal_stats  03_array_linear_search  04_array_reverse_inplace
2026-02-17/任务1_数组/: 01_array_basics.c  02_array_traversal_stats.c  03_array_linear_search.c  04_array_reverse_inplace.c
2026-02-17/任务2_Day5_字符串/: 01_string_basics  01_string_basics.c  02_my_strlen  02_my_strlen.c  03_safe_copy  03_safe_copy.c  字符串基础教学.md
2026-02-18/任务1_Day6_指针/: 01_pointer_basics  01_pointer_basics.c  02_swap_with_pointer  02_swap_with_pointer.c  03_pointer_array_walk  03_pointer_array_walk.c  04_pointer_param_safety  04_pointer_param_safety.c  指针入门教学.md
2026-02-19/任务1_Day7_指针与数组偏移/: 01_address_offset_observe  01_address_offset_observe.c  02_index_and_pointer_equivalence  02_index_and_pointer_equivalence.c  03_pointer_walk_window  03_pointer_walk_window.c  04_reverse_by_pointer_range  04_reverse_by_pointer_range.c  05_pointer_difference_and_search  05_pointer_difference_and_search.c
2026-02-20/任务1_Day8_const_sizeof_static/: 01_const_pointer_qualifiers.c  02_const_function_contract  02_const_function_contract.c  03_sizeof_core_cases  03_sizeof_core_cases.c  04_static_usage_scenarios  04_static_usage_scenarios.c  05_const_sizeof_static_mix  05_const_sizeof_static_mix.c  const_sizeof_static教学.md  p1
2026-02-21/任务1_Day9_struct_enum_typedef/: 01_struct_basics_student  01_struct_basics_student.c  02_enum_grade_state  02_enum_grade_state.c  03_typedef_alias_and_api  03_typedef_alias_and_api.c  04_student_manager_array  04_student_manager_array.c  05_struct_enum_typedef_mix  05_struct_enum_typedef_mix.c  struct_enum_typedef教学.md
2026-02-24/任务1_Day10_malloc_free/: 01_malloc_free_basics  01_malloc_free_basics.c  02_intvec_init_push  02_intvec_init_push.c  03_intvec_insert_erase  03_intvec_insert_erase.c  Day10_malloc_free_教学与任务.md
2026-02-25/任务1_Day11_realloc_expand/: 01_realloc_grow  01_realloc_grow.c  02_intvec_push_resize  02_intvec_push_resize.c  03_intvec_insert_resize  03_intvec_insert_resize.c  Day11_realloc_教学与任务.md
2026-02-25/任务2_Day13_单链表基础/: 01_list_length  01_list_length.c  02_reverse_list_inplace  02_reverse_list_inplace.c  03_remove_all_x  03_remove_all_x.c  Day13_单链表基础教学.md
2026-02-26/task3_day14_file_io_and_error_handling/: 01_read_file_lines  01_read_file_lines.c  02_student_record_io  02_student_record_io.c  03_word_count  03_word_count.c  04_file_copy_cp  04_file_copy_cp.c  Day14_文件读写与错误处理教学.md  count.txt  output.txt
2026-02-27/task4_day15_gdb_basics/: 01_breakpoint_and_step  01_breakpoint_and_step.c  02_backtrace_on_crash  02_backtrace_on_crash.c  03_watchpoint_track_change  (+2 more)
2026-03-02/task1_day18_cmake_intro/01_min_cmake_multifile/: CMakeLists.txt
2026-03-02/task1_day18_cmake_intro/01_min_cmake_multifile/src/: main.c  utils.c
2026-03-02/task1_day18_cmake_intro/02_debug_release_out_of_source/: CMakeLists.txt
2026-03-02/task1_day18_cmake_intro/02_debug_release_out_of_source/include/: math_utils.h
2026-03-02/task1_day18_cmake_intro/02_debug_release_out_of_source/src/: main.c  math_utils.c
2026-03-05/task1_day18_cmake_intro/03_realworld_lib_install/: CMakeLists.txt  README.md
2026-03-05/task1_day18_cmake_intro/03_realworld_lib_install/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  net_tool  netfmtConfig.cmake
2026-03-05/task1_day18_cmake_intro/03_realworld_lib_install/build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  net_tool
2026-03-05/task1_day18_cmake_intro/03_realworld_lib_install/cmake/: netfmtConfig.cmake.in
2026-03-05/task1_day18_cmake_intro/03_realworld_lib_install/consumer/: CMakeLists.txt
2026-03-05/task1_day18_cmake_intro/03_realworld_lib_install/include/: netfmt.h
2026-03-05/task1_day18_cmake_intro/03_realworld_lib_install/src/: main.c  netfmt.c
2026-03-05/task1_day18_cmake_intro/04_realworld_modules_ctest/: CMakeLists.txt  README.md
2026-03-05/task1_day18_cmake_intro/04_realworld_modules_ctest/build-debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  app  cmake_install.cmake  test_mathx  test_textx
2026-03-05/task1_day18_cmake_intro/04_realworld_modules_ctest/build-debug/Testing/Temporary/: CTestCostData.txt
2026-03-05/task1_day18_cmake_intro/04_realworld_modules_ctest/build-release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  app  cmake_install.cmake  test_mathx  test_textx
2026-03-05/task1_day18_cmake_intro/04_realworld_modules_ctest/include/: mathx.h  textx.h
2026-03-05/task1_day18_cmake_intro/04_realworld_modules_ctest/src/: main.c  mathx.c  textx.c
2026-03-05/task1_day18_cmake_intro/04_realworld_modules_ctest/tests/: test_mathx.c  test_textx.c
2026-03-06/task1_day19_mini_grep/: CMakeLists.txt  README.md  mini_grep_training_guide.md  任务书_mini_grep.md  项目拆分.md
2026-03-06/task1_day19_mini_grep/include/: args.h  common.h  error.h  grep.h  logger.h  matcher.h
2026-03-06/task1_day19_mini_grep/minigrep/: CMakeLists.txt
2026-03-06/task1_day19_mini_grep/minigrep/include/: args.h  grep.h
2026-03-06/task1_day19_mini_grep/minigrep/src/: args.c  grep.c  main.c
2026-03-06/task1_day19_mini_grep/reference_solution/src/: args.c  error.c  grep.c  logger.c  main.c  matcher.c
2026-03-06/task1_day19_mini_grep/src/: args.c  grep.c  logger.c  main.c  matcher.c
2026-03-06/task1_day19_mini_grep/tests/: run_tests.sh
2026-03-06/task1_day19_mini_grep/tests/data/: long_line.txt  normal.txt
2026-03-07/: a.txt  linux_io_day1_practice.md  minicat  minicat.c  minicp  minicp.c
2026-03-08/: 02_group_anagrams.c  03_longest_consecutive.c
study_checkin_app/: README.md  app.py  checkin.db  checkin.db.bak_20260219_103640  checkin.db.bak_20260219_105820  checkin.db.bak_20260219_122305  start_background.sh
(+115 files in other folders)
