cmake_minimum_required(VERSION 3.10)

project(min_cmake_multifile C)

# TODO: 设置 C 标准为 11，并要求必须满足
# set(CMAKE_C_STANDARD ??)
# set(CMAKE_C_STANDARD_REQUIRED ??)


# TODO: 把 src/main.c 和 src/utils.c 组成可执行文件 app
# add_executable(app
#     ...
# )

# TODO: 把 include 目录加入 app 的头文件搜索路径
# target_include_directories(app PRIVATE ...)

# TODO: 给 app 增加编译警告选项 -Wall -Wextra
# target_compile_options(app PRIVATE ...)
