cmake_minimum_required(VERSION 3.10)

# TODO: 修改为你自己的项目名
project(TODO_DEBUG_RELEASE C)

# TODO: 设置 C 标准
# set(CMAKE_C_STANDARD 11)
# set(CMAKE_C_STANDARD_REQUIRED ON)

# TODO: 把 src/main.c 和 src/math_utils.c 构建成 app
# add_executable(app
#     ...
# )

# TODO: 为 app 增加 include 搜索路径
# target_include_directories(app PRIVATE ...)

# TODO: 为 app 增加警告参数
# target_compile_options(app PRIVATE -Wall -Wextra)

